# kiss_chat

./: Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
assets/: README.txt
crates/kiss_chat/: Cargo.toml
crates/kiss_chat/src/: app.rs  main.rs  ui.rs
crates/kiss_chat_core/: Cargo.toml  README.md
crates/kiss_chat_core/src/: contacts.rs  crypto.rs  identity.rs  lib.rs  message.rs  test_support.rs
docs/: mobile-rust-ui-plan.md
src/: app.rs  contacts.rs  crypto.rs  identity.rs  lib.rs  main.rs  message.rs  proto.rs  transport.rs  ui.rs
