[package]
name = "kiss_chat"
description = "A quantum-resistant, naïvely implemented, end-to-end encryption tool written in Rust, naturally. Keep It Simple, Stupid!"
version = "0.3.0"
edition = "2024"
authors = ["George O. Wood <git@gwood.dev>"]
license = "GPL-3.0-or-later"
repository = "https://github.com/gwo0d/kiss_chat"
exclude = ["assets/"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[dependencies]
anyhow = "1.0.103"
chacha20poly1305 = { version = "0.11.0", features = ["zeroize"] }
crossterm = { version = "0.29.0", features = ["event-stream"] }
getrandom = "0.3.4"
hkdf = "0.13.0"
iroh = "1.0.1"
ml-dsa = { version = "0.1.1", features = ["zeroize"] }
ml-kem = { version = "0.3.2", features = ["getrandom", "zeroize"] }
ratatui = "0.30.2"
sha2 = { version = "0.11.0", features = ["zeroize"] }
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros", "sync", "io-util", "net", "rt"] }
x25519-dalek = { version = "2.0.1", features = ["static_secrets", "zeroize"] }
zeroize = "1.9.0"
