[package]
name = "kiss_chat"
description = "A keep-it-simple peer-to-peer chat with quantum-resistant end-to-end encryption."
version = "0.4.0"
edition = "2024"
# Real build floor, driven by dependencies (iroh), not the 2024 edition's 1.85.
# Re-check on dependency bumps and keep the README in step.
rust-version = "1.91"
authors = ["George O. Wood <git@gwood.dev>"]
license = "GPL-3.0-or-later"
repository = "https://github.com/gwo0d/kiss_chat"
exclude = ["assets/", ".github/"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[dependencies]
anyhow = "1.0.103"
chacha20poly1305 = { version = "0.11.0", features = ["zeroize"] }
crossterm = { version = "0.29.0", features = ["event-stream"] }
getrandom = "0.3.4"
hkdf = "0.13.0"
iroh = "1.0.1"
ml-dsa = { version = "0.1.1", features = ["zeroize"] }
ml-kem = { version = "0.3.2", features = ["getrandom", "zeroize"] }
ratatui = "0.30.2"
sha2 = { version = "0.11.0", features = ["zeroize"] }
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros", "sync", "io-util", "net", "rt"] }
x25519-dalek = { version = "2.0.1", features = ["static_secrets", "zeroize"] }
zeroize = "1.9.0"
